# player-manager

.qwen/: PROJECT_SUMMARY.md
Docs/: Game Design Doc.md  architecture.md
Docs/career/: detailed_reputation_system.md  progression.md  transfers.md
Docs/data/: saves.md
Docs/game_loop/: progression.md
Docs/manager/: ai.md
Docs/match/: event_data_structure.md  player_rating.md  simulation.md
Docs/narrative/: core.md
Docs/player/: data_structure_doc.md  development.md  form_system.md  injury_system.md  interactions.md  progression_logic.md
player-manager/: Cargo.toml  README.md  test_output.txt
player-manager/docs/implementation/: architecture.md  core_systems.md  entities.md  game_systems.md  ui_save_systems.md
player-manager/src/: lib.rs  main.rs
player-manager/src/core/: event_engine.rs  game_state.rs  mod.rs  time_engine.rs
player-manager/src/entities/: competition.rs  event.rs  match.rs  mod.rs  team.rs
player-manager/src/save/: mod.rs  save_manager.rs
player-manager/src/systems/: competition_system.rs  development_system.rs  match_system.rs  mod.rs  morale_system.rs  reputation_system.rs  social_system.rs  training_system.rs  transfer_system.rs
player-manager/src/ui/: console_ui.rs  mod.rs  tutorial.rs
player-manager/src/utils/: mod.rs
player-manager/tests/: integration_tests.rs
