[package]
name = "player-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "player-manager"
path = "src/main.rs"

[lib]
name = "player_manager"
path = "src/lib.rs"